# bruck-alltoallv

./: CMakeLists.txt  README.md  brucks.h
examples/: CMakeLists.txt  non_uniform_bruck_example.cpp  pingpongcheck.cpp  radix_r_bruck.cpp  radix_r_bruck_example.cpp  uniform_bruck_example.cpp
src/: CMakeLists.txt  non_uniform_bruck.cpp  non_uniform_bruck.h  padded_alltoall.cpp  padded_bruck.cpp  padded_modified_bruck.cpp  padded_zerocopy_bruck.cpp  radix_r_bruck.cpp  radix_r_bruck.h  speadout_alltoallv.cpp  twophase_bruck.cpp  uniform_bruck.cpp  uniform_bruck.h
test/: CMakeLists.txt  inverseComm.cpp  pingpongcheck.cpp
